self query retriever

--- a/notebooks/langchain/langchain-self-query-retriever.ipynb
+++ b/notebooks/langchain/langchain-self-query-retriever.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,19 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
+       " Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
        " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6}),\n",
-       " Document(page_content='Toys come alive and have a blast doing so', metadata={'year': 1995, 'genre': 'animated'}),\n",
-       " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
+       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,6 +344,177 @@
    ],
    "source": [
     "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2007?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question Answering with Self-Query Retriever\n",
+    "\n",
+    "We will now demonstrate how to use self-query retriever for RAG."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Inception (2010) is a movie about dreams that was released after 1992 but before 2007.')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.schema.runnable import RunnableParallel, RunnablePassthrough\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.schema import format_document\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
+    "\n",
+    "retriever = SelfQueryRetriever.from_llm(\n",
+    "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
+    ")\n",
+    "\n",
+    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Use the following context to answer the user's question.\n",
+    "\n",
+    "Use the knowledge from the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "\n",
+    "----\n",
+    "{context}\n",
+    "----\n",
+    "Question: {question}\n",
+    "Answer:\n",
+    "\"\"\")\n",
+    "\n",
+    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "---\n",
+    "year: {year}                                                                                            \n",
+    "{page_content}\n",
+    "---\n",
+    "\"\"\")\n",
+    "\n",
+    "def _combine_documents(\n",
+    "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
+    "):\n",
+    "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
+    "    return document_separator.join(doc_strings)\n",
+    "\n",
+    "\n",
+    "_context = RunnableParallel(\n",
+    "    context=retriever | _combine_documents,\n",
+    "    question=RunnablePassthrough(),\n",
+    ")\n",
+    "\n",
+    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "\n",
+    "chain.invoke(\"What movies are about dreams and was released after the year 1992 but before 2007?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BM25 Only Retriever \n",
+    "One option is to customise the query to use BM25 only retrieval method. We can do this by overriding the `custom_query` function, specifying the query to use only `multi_match`.\n",
+    "\n",
+    "This means that you dont have to vectorise all the documents and can use it on an existing Elasticsearch index. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Inception (2010) is a movie about dreams that was released after 1992 but before 2007.')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.schema.runnable import RunnableParallel, RunnablePassthrough\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.schema import format_document\n",
+    "\n",
+    "def custom_query(query_body, query):\n",
+    "    filters = query_body.get(\"query\", {}).get(\"bool\", {}).get(\"filter\", [])\n",
+    "\n",
+    "    return {\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"filter\": filters,\n",
+    "                \"must\": [\n",
+    "                    {\n",
+    "                        \"multi_match\": {\n",
+    "                            \"query\": query,\n",
+    "                            \"fields\": [\"text\"],\n",
+    "                            \"fuzziness\": \"AUTO\",\n",
+    "                        }\n",
+    "                    }\n",
+    "                ]\n",
+    "            }\n",
+    "        },\n",
+    "    }\n",
+    "\n",
+    "retriever = SelfQueryRetriever.from_llm(\n",
+    "    llm, \n",
+    "    vectorstore, \n",
+    "    document_content_description, \n",
+    "    metadata_field_info, \n",
+    "    verbose=True, \n",
+    "    search_kwargs={\n",
+    "      \"custom_query\": custom_query\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Use the following context to answer the user's question.\n",
+    "\n",
+    "Use the knowledge from the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "\n",
+    "----\n",
+    "{context}\n",
+    "----\n",
+    "Question: {question}\n",
+    "Answer:\n",
+    "\"\"\")\n",
+    "\n",
+    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "---\n",
+    "year: {year}                                              \n",
+    "{page_content}\n",
+    "---\n",
+    "\"\"\")\n",
+    "\n",
+    "def _combine_documents(\n",
+    "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
+    "):\n",
+    "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
+    "    return document_separator.join(doc_strings)\n",
+    "\n",
+    "\n",
+    "_context = RunnableParallel(\n",
+    "    context=retriever | _combine_documents,\n",
+    "    question=RunnablePassthrough(),\n",
+    ")\n",
+    "\n",
+    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "\n",
+    "chain.invoke(\"What movies are about dreams and was released after the year 1992 but before 2007?\")"
    ]
   }
  ],
