updated self-query retriever

--- a/notebooks/langchain/langchain-self-query-retriever.ipynb
+++ b/notebooks/langchain/langchain-self-query-retriever.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -60,30 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "docs = [\n",
     "    Document(\n",
     "        page_content=\"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
-    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\"},\n",
+    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\", \"director\": \"Steven Spielberg\", \"title\": \"Jurassic Park\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Leo DiCaprio gets lost in a dream within a dream within a dream within a ...\",\n",
-    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2},\n",
+    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2, \"title\": \"Inception\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
-    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6},\n",
+    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6, \"title\": \"Paprika\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
-    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3},\n",
+    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3, \"title\": \"Little Women\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Toys come alive and have a blast doing so\",\n",
-    "        metadata={\"year\": 1995, \"genre\": \"animated\"},\n",
+    "        metadata={\"year\": 1995, \"genre\": \"animated\", \"director\": \"John Lasseter\", \"rating\": 8.3, \"title\": \"Toy Story\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Three men walk into the Zone, three men walk out of the Zone\",\n",
@@ -93,6 +93,7 @@
     "            \"director\": \"Andrei Tarkovsky\",\n",
     "            \"genre\": \"science fiction\",\n",
     "            \"rating\": 9.9,\n",
+    "            \"title\": \"Stalker\",\n",
     "        },\n",
     "    ),\n",
     "]"
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
     "metadata_field_info = [\n",
     "    AttributeInfo(\n",
     "        name=\"genre\",\n",
-    "        description=\"The genre of the movie\",\n",
+    "        description=\"The genre of the movie. Can be either 'science fiction' or 'animated'.\",\n",
     "        type=\"string or list[string]\",\n",
     "    ),\n",
     "    AttributeInfo(\n",
@@ -202,19 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
-       " Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
        " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6}),\n",
-       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
+       " Document(page_content='Toys come alive and have a blast doing so', metadata={'year': 1995, 'genre': 'animated'}),\n",
+       " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +247,7 @@
        "[Document(page_content='Three men walk into the Zone, three men walk out of the Zone', metadata={'year': 1979, 'rating': 9.9, 'director': 'Andrei Tarkovsky', 'genre': 'science fiction'})]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +306,7 @@
        " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
        "[Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Inception (2010) is a movie about dreams that was released after 1992 but before 2007.')"
+       "AIMessage(content='Inception (2010)')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +378,16 @@
     "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
     "from langchain.schema import format_document\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
+    "llm = ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY, verbose=True)\n",
     "\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
     ")\n",
     "\n",
     "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
-    "Use the following context to answer the user's question.\n",
+    "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
     "\n",
-    "Use the knowledge from the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
     "\n",
     "----\n",
     "{context}\n",
@@ -397,8 +398,9 @@
     "\n",
     "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
     "---\n",
-    "year: {year}                                                                                            \n",
-    "{page_content}\n",
+    "title: {title}                                                                                   \n",
+    "year: {year}  \n",
+    "director: {director}    \n",
     "---\n",
     "\"\"\")\n",
     "\n",
@@ -426,21 +428,32 @@
     "## BM25 Only Retriever \n",
     "One option is to customise the query to use BM25 only retrieval method. We can do this by overriding the `custom_query` function, specifying the query to use only `multi_match`.\n",
     "\n",
-    "This means that you dont have to vectorise all the documents and can use it on an existing Elasticsearch index. "
+    "In the example below, the self-query retriever is using the LLM to transform the question into a keyword and filter query (query: dreams, filter: year range). The custom query is then used to perform a BM25 based query on the keyword query and filter query.\n",
+    "\n",
+    "This means that you dont have to vectorise all the documents if you want to perform a question / answerinf use-case on an existing Elasticsearch index. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filters: [{'bool': {'must': [{'match': {'metadata.genre': {'query': 'science fiction'}}}, {'range': {'metadata.year': {'gt': 1992}}}, {'range': {'metadata.year': {'lt': 2007}}}]}}]\n",
+      "query: dinosaur\n",
+      "docs: [Document(page_content='A bunch of scientists bring back dinosaurs and mayhem breaks loose', metadata={'year': 1993, 'rating': 7.7, 'genre': 'science fiction', 'director': 'Steven Spielberg', 'title': 'Jurassic Park'})]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "AIMessage(content='Inception (2010) is a movie about dreams that was released after 1992 but before 2007.')"
+       "'Steven Spielberg directed Jurassic Park in 1993.'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,21 +464,28 @@
     "from langchain.schema import format_document\n",
     "\n",
     "def custom_query(query_body, query):\n",
-    "    filters = query_body.get(\"query\", {}).get(\"bool\", {}).get(\"filter\", [])\n",
+    "    filters = query_body.get(\"knn\", {}).get(\"filter\", [])\n",
+    "    \n",
+    "    print(f\"filters: {filters}\")\n",
+    "    print(f\"query: {query}\")\n",
+    "\n",
+    "    if query.strip() != \"\":\n",
+    "        query_clause = [{\n",
+    "            \"multi_match\": {\n",
+    "                \"query\": query,\n",
+    "                \"fields\": [\"text\"],\n",
+    "                \"fuzziness\": \"AUTO\",\n",
+    "            }\n",
+    "        }]\n",
+    "    else:\n",
+    "        query_clause = []\n",
+    "\n",
     "\n",
     "    return {\n",
     "        \"query\": {\n",
     "            \"bool\": {\n",
     "                \"filter\": filters,\n",
-    "                \"must\": [\n",
-    "                    {\n",
-    "                        \"multi_match\": {\n",
-    "                            \"query\": query,\n",
-    "                            \"fields\": [\"text\"],\n",
-    "                            \"fuzziness\": \"AUTO\",\n",
-    "                        }\n",
-    "                    }\n",
-    "                ]\n",
+    "                \"must\": query_clause\n",
     "            }\n",
     "        },\n",
     "    }\n",
@@ -482,9 +502,9 @@
     ")\n",
     "\n",
     "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
-    "Use the following context to answer the user's question.\n",
+    "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
     "\n",
-    "Use the knowledge from the context. If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
     "\n",
     "----\n",
     "{context}\n",
@@ -495,14 +515,16 @@
     "\n",
     "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
     "---\n",
-    "year: {year}                                              \n",
-    "{page_content}\n",
+    "title: {title}                                                                                   \n",
+    "year: {year}  \n",
+    "director: {director}     \n",
     "---\n",
     "\"\"\")\n",
     "\n",
     "def _combine_documents(\n",
     "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
     "):\n",
+    "    print(\"docs:\", docs)\n",
     "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
     "    return document_separator.join(doc_strings)\n",
     "\n",
@@ -514,7 +536,7 @@
     "\n",
     "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
     "\n",
-    "chain.invoke(\"What movies are about dreams and was released after the year 1992 but before 2007?\")"
+    "chain.invoke(\"Which director directed movies about dinosaurs that was released after the year 1992 but before 2007?\")"
    ]
   }
  ],
