move self-query retrievers examples to folder

--- a/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self-querying retriever with elasticsearch and langchain\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/langchain-self-query-retriever.ipynb)\n",
+    "# Chatbot Example with Self Query Retriever\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb)\n",
     "\n",
-    "This workbook demonstrates example of Elasticsearch's [Self-query retriever](https://api.python.langchain.com/en/latest/retrievers/langchain.retrievers.self_query.base.SelfQueryRetriever.html) to convert unstructured query into a structured query and apply structured query to a vectorstore. \n",
+    "This workbook demonstrates example of Elasticsearch's [Self-query retriever](https://api.python.langchain.com/en/latest/retrievers/langchain.retrievers.self_query.base.SelfQueryRetriever.html) to convert a question into a structured query and apply structured query to Elasticsearch index. \n",
     "\n",
     "Before we begin, we first split the documents into chunks with `langchain` and then using [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents), we create a `vectorstore` and index data to elasticsearch.\n",
     "\n",
@@ -194,163 +194,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test retriever with simple query\n",
-    "\n",
-    "We will test the retriever with a simple query:  `What are some movies about dream`. \n",
-    "\n",
-    "The output shows all the relevant documents to the query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
-       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6}),\n",
-       " Document(page_content='Toys come alive and have a blast doing so', metadata={'year': 1995, 'genre': 'animated'}),\n",
-       " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# This example only specifies a relevant query \n",
-    "retriever.get_relevant_documents(\"What are some movies about dream\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test retriever with simple query and filter\n",
-    "\n",
-    "We will now test the retriever with a query:  `Has Andrei Tarkovsky directed any science fiction movies`. \n",
-    "\n",
-    "This query has a filter on the metadata `genre` and  `director`. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Three men walk into the Zone, three men walk out of the Zone', metadata={'year': 1979, 'rating': 9.9, 'director': 'Andrei Tarkovsky', 'genre': 'science fiction'})]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"Has Andrei Tarkovsky directed any science fiction movies\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Instantiate retriever to filter k documents\n",
-    "\n",
-    "We will now instantiate retriever again to fetch k number of documents. We can do this my setting `enable_limit=True` when instantiating the retriever. \n",
-    "\n",
-    "We will then test retriever to filter k documents."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm,\n",
-    "    vectorstore,\n",
-    "    document_content_description,\n",
-    "    metadata_field_info,\n",
-    "    enable_limit=True,\n",
-    "    verbose=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test the retriever to filter k documents\n",
-    "\n",
-    "We will now test the retriever with a query:  `what are two movies about dream`. \n",
-    "\n",
-    "The output would show exactly `2` documents. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
-       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"what are two movies about dream\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test retriever for complex queries\n",
-    "\n",
-    "We will try some complex queries with filters and `1 limit`.\n",
-    "\n",
-    "\n",
-    "Query: `Show that one movie which was about dream and was released after the year 1992 but before 2007?`. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2007?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Question Answering with Self-Query Retriever\n",
     "\n",
     "We will now demonstrate how to use self-query retriever for RAG."
@@ -377,12 +220,6 @@
     "from langchain.schema.runnable import RunnableParallel, RunnablePassthrough\n",
     "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
     "from langchain.schema import format_document\n",
-    "\n",
-    "llm = ChatOpenAI(temperature=0, openai_api_key=OPENAI_API_KEY, verbose=True)\n",
-    "\n",
-    "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
-    ")\n",
     "\n",
     "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
     "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
@@ -419,124 +256,6 @@
     "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
     "\n",
     "chain.invoke(\"What movies are about dreams and was released after the year 1992 but before 2007?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BM25 Only Retriever \n",
-    "One option is to customise the query to use BM25 only retrieval method. We can do this by overriding the `custom_query` function, specifying the query to use only `multi_match`.\n",
-    "\n",
-    "In the example below, the self-query retriever is using the LLM to transform the question into a keyword and filter query (query: dreams, filter: year range). The custom query is then used to perform a BM25 based query on the keyword query and filter query.\n",
-    "\n",
-    "This means that you dont have to vectorise all the documents if you want to perform a question / answerinf use-case on an existing Elasticsearch index. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "filters: [{'bool': {'must': [{'match': {'metadata.genre': {'query': 'science fiction'}}}, {'range': {'metadata.year': {'gt': 1992}}}, {'range': {'metadata.year': {'lt': 2007}}}]}}]\n",
-      "query: dinosaur\n",
-      "docs: [Document(page_content='A bunch of scientists bring back dinosaurs and mayhem breaks loose', metadata={'year': 1993, 'rating': 7.7, 'genre': 'science fiction', 'director': 'Steven Spielberg', 'title': 'Jurassic Park'})]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Steven Spielberg directed Jurassic Park in 1993.'"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.schema.runnable import RunnableParallel, RunnablePassthrough\n",
-    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
-    "from langchain.schema import format_document\n",
-    "\n",
-    "def custom_query(query_body, query):\n",
-    "    filters = query_body.get(\"knn\", {}).get(\"filter\", [])\n",
-    "    \n",
-    "    print(f\"filters: {filters}\")\n",
-    "    print(f\"query: {query}\")\n",
-    "\n",
-    "    if query.strip() != \"\":\n",
-    "        query_clause = [{\n",
-    "            \"multi_match\": {\n",
-    "                \"query\": query,\n",
-    "                \"fields\": [\"text\"],\n",
-    "                \"fuzziness\": \"AUTO\",\n",
-    "            }\n",
-    "        }]\n",
-    "    else:\n",
-    "        query_clause = []\n",
-    "\n",
-    "\n",
-    "    return {\n",
-    "        \"query\": {\n",
-    "            \"bool\": {\n",
-    "                \"filter\": filters,\n",
-    "                \"must\": query_clause\n",
-    "            }\n",
-    "        },\n",
-    "    }\n",
-    "\n",
-    "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm, \n",
-    "    vectorstore, \n",
-    "    document_content_description, \n",
-    "    metadata_field_info, \n",
-    "    verbose=True, \n",
-    "    search_kwargs={\n",
-    "      \"custom_query\": custom_query\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
-    "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
-    "\n",
-    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
-    "\n",
-    "----\n",
-    "{context}\n",
-    "----\n",
-    "Question: {question}\n",
-    "Answer:\n",
-    "\"\"\")\n",
-    "\n",
-    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
-    "---\n",
-    "title: {title}                                                                                   \n",
-    "year: {year}  \n",
-    "director: {director}     \n",
-    "---\n",
-    "\"\"\")\n",
-    "\n",
-    "def _combine_documents(\n",
-    "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
-    "):\n",
-    "    print(\"docs:\", docs)\n",
-    "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
-    "    return document_separator.join(doc_strings)\n",
-    "\n",
-    "\n",
-    "_context = RunnableParallel(\n",
-    "    context=retriever | _combine_documents,\n",
-    "    question=RunnablePassthrough(),\n",
-    ")\n",
-    "\n",
-    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
-    "\n",
-    "chain.invoke(\"Which director directed movies about dinosaurs that was released after the year 1992 but before 2007?\")"
    ]
   }
  ],
