--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -10,7 +10,10 @@
     "# Chunk Large Documents via Ingest pipelines\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/document-chunking/with-index-pipelines.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
-    "This interactive notebook will:\n"
+    "This interactive notebook will:\n",
+    "- load the model \"sentence-transformers__all-minilm-l6-v2\" from Hugging Face and into Elasticsearch ML Node\n",
+    "- create an index and ingest pipeline that will chunk large fields into smaller passages and vectorize them using the model\n",
+    "- perform a search and return docs with the most relevant passages"
    ]
   },
   {
