add with makefile

--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -47,22 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "ffc5fa6f",
    "metadata": {
     "id": "ffc5fa6f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 -m pip install -qU elasticsearch eland"
    ]
@@ -289,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "_OAahfg-tqrf",
    "metadata": {
     "colab": {
@@ -302,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'chunker'})"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'chunk_passages_example'})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,6 +363,7 @@
     "from elasticsearch import helpers\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/datasets/workplace-documents.json\"\n",
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"\n",
     "docs = json.loads(urlopen(url).read())\n",
     "\n",
     "operations = [\n",
@@ -388,6 +379,7 @@
     "response = helpers.bulk(\n",
     "  client,\n",
     "  operations,\n",
+    "  refresh=True,\n",
     ")"
    ]
   },
@@ -531,6 +523,17 @@
     ")\n",
     "\n",
     "pretty_response(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b269da89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.indices.delete(index=INDEX_NAME)\n",
+    "client.ingest.delete_pipeline(id=\"chunk_text_to_passages\")\n"
    ]
   }
  ],
